<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idActivationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tooth"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/spinner_login" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/authorization_label"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/auth_editTextSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="20"
        android:hint="@string/authorization_hint_surname"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/auth_editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="20"
        android:hint="@string/authorization_hint_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/auth_editTextPatronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="20"
        android:hint="@string/authorization_hint_patronymic"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/auth_editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:ems="10"
        android:hint="@string/authorization_hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/enterBase"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/authorization_btn_enterBase"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/button_color"
        android:contentDescription="TODO"
        android:src="@drawable/twotone_password_20" />


</LinearLayout>